# frappe-ftap-poc

./: README.md  pyproject.toml
docs/: ftap-frappe-poc.md
ftap_frappe_poc/: hooks.py  modules.txt
ftap_frappe_poc/config/: desktop.py
ftap_frappe_poc/fixtures/: role.json  workflow.json  workflow_action_master.json  workflow_state.json
ftap_frappe_poc/ftap_workflow/: api.py
ftap_frappe_poc/ftap_workflow/doctype/ftap_inspection_check/: ftap_inspection_check.json  ftap_inspection_check.py
ftap_frappe_poc/ftap_workflow/doctype/ftap_service_ticket/: ftap_service_ticket.json  ftap_service_ticket.py
ftap_frappe_poc/ftap_workflow/doctype/ftap_work_order/: ftap_work_order.json  ftap_work_order.py
presentations/: ftap-frappe-poc-avp-deck.pptx  ftap-frappe-poc-engineering-handoff.pptx
